Fixed grid spacing on product layout page
Only modified the grid row spacing for the main-grid-container class in the product layout page.

--- a/css/product-layout.css
+++ b/css/product-layout.css
@@ -31,6 +31,11 @@
 	position: relative;
 }
 
+/* adjusts the spacing between h1 and header image */
+#product-layout-page.main-grid-container {
+	grid-row-gap: 0.2rem;
+}
+
 /* product layout page container: ONLY applies to content in Oriento and Tom Crew Collection */
 #orientoCollection .product-card-container, #tomCrewCollection .product-card-container {
 	display: grid; 
